--- a/database.yml
+++ b/database.yml
@@ -1,13 +1,8 @@
 development:
   dialect: postgres
   database: buffalo_example_development
-  user: postgres
-  password: postgres
+  user: buffalo
+  password: buffalo
   host: 127.0.0.1
   pool: 5
 
-test:
-  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/buffalo_example_test?sslmode=disable"}}
-
-production:
-  url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/buffalo_example_production?sslmode=disable"}}
