--- a/database.yml
+++ b/database.yml
@@ -5,4 +5,5 @@ development:
   password: buffalo
   host: 127.0.0.1
   pool: 5
-
+test:
+      url: {{envOr "TEST_DATABASE_URL" "postgres://buffalo:buffalo@127.0.0.1:5432/buffalo_example_development"}}
