--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ install:
     - dep ensure
     - go get github.com/gobuffalo/pop/...
     - go install github.com/gobuffalo/pop/soda
-    - soda drop -e test
-    - soda create -e test
+    - soda drop -a
+    - soda create -a
 
 script:
     - buffalo test
